@@ -1,8 +1,19 @@
+2006-03-30  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* R/dtCMatrix.R: allow coercion from  dgC* to triangular (dtC*)
+	* R/dsCMatrix.R: and symmetric (dsC*) 'Csparse' matrices.
+
+	* R/Tsparse.R: Tsparse* -> Csparse* coercion now works and is tested in
+	* tests/simple: (extended)
+
+	* R/sparseMatrix.R (isTriangular): now using much improved
+	* R/Auxiliaries.R (isTriC): new triangularity check for *CMatrix
+
 2006-03-23  Douglas Bates  <bates@stat.wisc.edu>
 
 	* src/dsyMatrix.c (dsyMatrix_as_dspMatrix): Propagate DimNames
 	(problem report from Franklin Parlamis).  This should be done
-	generally. 
+	generally.
 
 2006-03-21  Douglas Bates  <bates@stat.wisc.edu>
 
